apps/speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: speedtest
  annotations:
    th3borg.org/apps-healthcheck: "/api/healthcheck"
    th3borg.org/apps-category: "tools"
    th3borg.org/apps-tier: "optional"
    kubernetes.io/ingress.class: nginx
    th3borg.org/apps-portal: "true"
    th3borg.org/apps-name: "Speedtest Tracker"
    th3borg.org/apps-description: "Internet speed monitoring"
    th3borg.org/apps-icon: "gauge"
spec:
  rules:
    - host: speedtest.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest
                port:
                  number: 80
